--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "jquery": "1.9.*",
     "bootstrap-sass-official": "3.1.1",
-    "bootstrap": "~3.0.2"
+    "bootstrap": "~3.0.2",
+    "tingle": "^0.9.0"
   }
 }
