--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp",
+    "upload": "s3-site-cache-optimizer ~/srv/tt-website/public \"www.tomtosseyn.be\"  --exclude \".git/*\" \".git*\" ",
+    "deploy": "npm run build && npm run upload"
   },
   "author": "Juan B. Rodriguez",
   "license": "MIT",
@@ -21,10 +24,10 @@
     "gulp-rename": "1.2.*",
     "gulp-rev": "^3.0.1",
     "gulp-rev-replace": "^0.4.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-size": "^1.2.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-size": "^2.1.0",
     "gulp-svgmin": "^1.1.1",
-    "gulp-uglify": "^1.1.0",
+    "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.4",
     "path": "^0.11.14",
     "require-dir": "^0.3.0",
