temp tool for customizing background developer

--- a/data/info.yml
+++ b/data/info.yml
@@ -3,6 +3,32 @@ info: '
   # Tom Tosseyn
 
 
+  Tom Tosseyn は、アントワープを拠点に様々な分野で活動するグラフィック・アーティスト。特にファッション業界におけるキャリアは10年以上にわたり、サブカルチャー、ストリートウェア、ハイエンド、ラグジャリーなど幅広い分野においてエクスクルーシヴコレクションを中心に手がけてきた。ファッションにとどまらず、タイポグラフィーやロゴのデザインにも情熱を注いでいる。
+
+
+  バイオグラフィー：
+  Henry Van de Velde Institute（アントワープ）にてインダストリアルデザインを2年間学んだ後、Antwerp Royal Academy of Fine Artsのグラフィックデザイン学科へ編入、1998年に卒業。卒業後、同じくアントワープにあるHigher Institute for Fine Arts (HISK)にて、アート部門で賞を受賞。
+
+
+  就学中、Tシャツのグラフィックやロゴ、インビテーションのデザインなどファッション関連の仕事を請け負う一方、伝説の5voor12（De Nachten, 10DAYSOFF, Night Cruiser, De Zomer van Antwerpen）がオーガナイズするアンダーグラウンドパーティーdoZerのポスターやフライヤーを手掛け、アントワープの街をジャックする。
+
+
+  ファッション関連の仕事が本格化したのは2002年。
+  Diesel/55DSLのクリエイティブチームの一員となったのを機に、イタリアへ拠点を移した頃から。その4年後、Hugo Boss（ドイツ）へ転職。
+
+
+  2008年に母国のベルギーに帰国して以来、アントワープを拠点としフリーランスのデザイナー、コンサルタントとして複数のインターナショナルブランドやハイエンドブランドと関わっている。
+
+
+  2010年、ハッセルトにあるアートセンターZ33、アントワープにあるGallerie Annette De Keyser やMX7 Galleryにてコラボレーションアート展へ参加したことからアーティストとしての活動もスタート。同時に、KASKのファション/テキスタイル学科（ゲント）で教授としてのキャリアも始まり、ヨーロッパ各地の大学や教育・研究機関でワークショプを開催。
+
+
+  2011年、新たな挑戦として、自身のレーベルでシルクフーラード、Tシャツ、ウィークエンドバッグを展開。
+
+
+  <br/><br/>
+
+
   Tom Tosseyn is a multidisciplinary graphic artist based in Antwerp, with over 10 years of experience in the fashion business, from subculture and street wear to high-end fashion and luxury. Specialising in distinctive, advanced designs with strong concepts for unique and exclusive products. Besides fashion Tom has a huge fascination for LOGO design and TYPOGRAPHY.
 
 
@@ -34,8 +60,14 @@ info: '
   # CLIENTS
 
   
-  TIM COPPENS, RAF SIMONS, JIL SANDER, AF VANDEVORST, BVBA32, ADIDAS Y-3, McQ (Alexander Mc Queen), DUST MAGAZINE, CHEAP MONDAY, LEE, FRED PERRY, DIESEL, 55DSL, EAT DUST, MHI (MAHARISHI), MYAR, SNEAKER BOY, CAFE COSTUME, CALVIN KLEIN, TOMMY HILFIGER, KARL, LA FILLE d’O, 
-  B-ARCHITECTEN; CROSSOVER, OZARK HENRY, NOVASTAR, HANTAX, R&S RECORDS...
+  <p class="text-center">RAF SIMONS, JIL SANDER, TIM COPPENS, ADIDAS Y-3, McQ (Alexander Mc Queen), DUST MAGAZINE
+  AF VANDEVORST, BVBA32, CAPARA, CAFE COSTUME, LA FILLE d’O, EAT DUST
+  SNEAKER BOY, FRED PERRY, CHEAP MONDAY, LEE, DIESEL, 55DSL, MHI (MAHARISHI), MYAR
+  CALVIN KLEIN, TOMMY HILFIGER, KARL</p>
+
+
+  <p class="text-center">R&S RECORDS, OZARK HENRY, NOVASTAR, HANTAX, SCALE, CROSSOVER, DOPPLER (MURDERCAPITAL FM) …</p>
+
   '
 
   
