--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
     "upload": "s3-site-cache-optimizer ~/srv/tt-website/public \"www.tomtosseyn.be\"  --exclude \".git/*\" \".git*\" ",
-    "deploy": "npm run build && npm run upload"
+    "deploy": "export AWS_PROFILE=sanderbelen && npm run build && npm run upload"
   },
   "author": "Juan B. Rodriguez",
   "license": "MIT",
