--- a/data/info.yml
+++ b/data/info.yml
@@ -60,13 +60,12 @@ info: '
   # CLIENTS
 
   
-  <p class="text-center">RAF SIMONS, JIL SANDER, TIM COPPENS, ADIDAS Y-3, McQ (Alexander Mc Queen), DUST MAGAZINE
-  AF VANDEVORST, BVBA32, CAPARA, CAFE COSTUME, LA FILLE d’O, EAT DUST
-  SNEAKER BOY, FRED PERRY, CHEAP MONDAY, LEE, DIESEL, 55DSL, MHI (MAHARISHI), MYAR
-  CALVIN KLEIN, TOMMY HILFIGER, KARL</p>
+  <p class="text-center">RAF SIMONS, JIL SANDER, TIM COPPENS, ADIDAS Y-3, McQ (Alexander Mc Queen), DUST MAGAZINE, AF VANDEVORST, BVBA32, CAPARA, CAFE COSTUME, LA FILLE d’O, EAT DUST, SNEAKER BOY, FRED PERRY, CHEAP MONDAY, LEE, DIESEL, 55DSL, MHI (MAHARISHI), MYAR, CALVIN KLEIN, TOMMY HILFIGER, KARL, …</p>
 
 
-  <p class="text-center">R&S RECORDS, OZARK HENRY, NOVASTAR, HANTAX, SCALE, CROSSOVER, DOPPLER (MURDERCAPITAL FM) …</p>
+  <p class="text-center">R&S RECORDS, OZARK HENRY, NOVASTAR, HANTAX, SCALE, KRAMER, CROSSOVER, DOPPLER (MURDERCAPITAL FM) …</p>
+  <br />
+  <br />
 
   '
 
